// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots helpers|useSnapEdgeToParent default 1`] = `
.c0 {
  padding: 12px;
}

.c1 {
  width: 80%;
  height: 500px;
  background-color: #fff;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

<div
  className="c0"
>
  <div
    className="c1"
    height={500}
    width="80%"
  >
    <div
      style={
        Object {
          "background": "cyan",
          "height": 20,
          "position": "relative",
          "width": 200,
        }
      }
    >
      Parent
      <div
        style={
          Object {
            "background": "green",
            "height": 200,
            "left": 0,
            "position": "absolute",
            "top": 20,
            "width": 300,
          }
        }
      />
    </div>
  </div>
</div>
`;

exports[`Storyshots helpers|useSnapEdgeToParent different break distances 1`] = `
.c0 {
  padding: 12px;
}

.c1 {
  width: 80%;
  height: 500px;
  background-color: #fff;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

<div
  className="c0"
>
  <div
    className="c1"
    height={500}
    width="80%"
  >
    <div
      style={
        Object {
          "background": "cyan",
          "height": 20,
          "position": "relative",
          "width": 200,
        }
      }
    >
      Parent
      <div
        style={
          Object {
            "background": "green",
            "height": 200,
            "left": 0,
            "position": "absolute",
            "top": 20,
            "width": 300,
          }
        }
      />
    </div>
  </div>
</div>
`;

exports[`Storyshots helpers|useSnapEdgeToParent documentation 1`] = `
.c0 {
  padding: 12px;
}

<div
  className="c0"
/>
`;

exports[`Storyshots helpers|useSnapEdgeToParent fixed orientation 1`] = `
.c0 {
  padding: 12px;
}

.c1 {
  width: 80%;
  height: 500px;
  background-color: #fff;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

<div
  className="c0"
>
  <div
    className="c1"
    height={500}
    width="80%"
  >
    <div
      style={
        Object {
          "background": "cyan",
          "height": 20,
          "position": "relative",
          "width": 200,
        }
      }
    >
      Parent
      <div
        style={
          Object {
            "background": "green",
            "height": 200,
            "position": "absolute",
            "right": 0,
            "top": 20,
            "width": 300,
          }
        }
      />
    </div>
  </div>
</div>
`;

exports[`Storyshots helpers|useSnapEdgeToParent relative to container 1`] = `
.c0 {
  padding: 12px;
}

.c1 {
  width: 80%;
  height: 500px;
  background-color: lightgray;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

<div
  className="c0"
>
  <div
    className="c1"
    height={500}
    width="80%"
  >
    <div
      style={
        Object {
          "background": "cyan",
          "height": 20,
          "position": "relative",
          "width": 200,
        }
      }
    >
      Parent
      <div
        style={
          Object {
            "background": "green",
            "height": 200,
            "left": 0,
            "position": "absolute",
            "top": 20,
            "width": 300,
          }
        }
      />
    </div>
  </div>
</div>
`;
